fix gallery bug for right margin not showing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -484,6 +484,7 @@ a {
 
     max-width: 100%;
     height: auto;
+    box-sizing: border-box;
     background-color: #ed7444;
     border-radius: 2.5%;
     border: 2px solid black;
@@ -496,6 +497,7 @@ a {
 
     display: grid;
     width: auto;
+    
     gap: 1rem;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 7px 7px 50px 5px;
